--- a/templates/project.html
+++ b/templates/project.html
@@ -7,6 +7,23 @@
 
 {% block head %}
 <style>
+.task-group {
+  margin-top: 2em;
+}
+
+.task {
+  border: 1px solid #ABA;
+  border-radius: 8px;
+  background-color: #F3FAF3;
+  padding: .75em .9em;
+}
+  .task .task-title {
+    margin-bottom: 1em;
+  }
+  .task .task-commands button {
+    padding-left: 0;
+  }
+
 .task.deleted span {
   color: #DDD;
   text-decoration: line-through;
@@ -104,9 +121,10 @@
 
       {% for tab in tabs %}
         <div role="tabpanel" class="tab-pane {% if forloop.first %}active{% endif %}" id="{{forloop.counter}}-{{tab.title|slugify}}">
-          <div style="margin: 1em 1em 1em 0">
+          <div>
 
             {% for group in tab.groups.values %}
+            <div class="task-group">
               <h3>{{group.title}}</h3>
 
               <div class="row">
@@ -118,11 +136,11 @@
                 {% endif %}
 
                 <div class="col-sm-3">
-                <div class="panel panel-default task">
-                  <div class="panel-heading">
+                <div class="task">
+                  <div class="task-title">
                     {{rec.question.spec.title}}
                   </div>
-                  <div class="panel-body">
+                  <div class="task-commands">
                     {% if not rec.task %}
                       {% if can_begin_module %}
                         {# can only start a new module within a project you are the admin of #}
@@ -130,9 +148,9 @@
                           {% csrf_token %}
                           <input type="hidden" name="project" value="{{project.id}}"/>
                           <input type="hidden" name="question" value="{{rec.question.key}}"/>
-                          <button type="submit" class="btn btn-primary">Start Module</button>
+                          <button type="submit" class="btn btn-link">Start Module</button>
                         </form>
-                        <button class="btn btn-warning" onclick="return invite_user_to_start_module('{{rec.module.title|escapejs}}', {{rec.question.id}});">Invite to Answer ...</button>
+                        <button class="btn btn-link" onclick="return invite_user_to_start_module('{{rec.module.title|escapejs}}', {{rec.question.id}});">Invite to Answer</button>
                       {% else %}
                         Not Started
                       {% endif %}
@@ -162,14 +180,13 @@
                       </div>
                       {% endif %}
                     {% endif %}
-                  </div> <!-- /panel-body -->
-                </div> <!-- /panel -->
+                  </div> <!-- /task-commands -->
+                </div> <!-- /task -->
                 </div> <!-- /col -->
               {% endfor %}
               </div> <!-- /row -->
-
+              </div> <!-- /task-group -->
             {% endfor %}
-
           </div>
         </div>
       {% endfor %}
