--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@ GovReady Q
       <div class="container">
         <h1>Welcome to GovReady Q</h1>
         <p>We&rsquo;ll help you answer questions and produce a document.</p>
-        <p><a class="btn btn-primary btn-lg" role="button" href="{% url 'login' %}">Log in &raquo;</a></p>
+        <p><a class="btn btn-primary btn-lg" role="button" href="{% url 'account_login' %}">Log in &raquo;</a></p>
       </div>
     </div>
 
