--- a/templates/question.html
+++ b/templates/question.html
@@ -143,14 +143,14 @@ Next Question: {{q.spec.title}}
                 <div class="radio">
                   <label>
                     <input name="value" value="{{t.id}}" type="radio" checked>
-                    Use my answers in {{t.title}}
+                    Use my answers in {{t.render_title}}
                       (<a href="{{t.get_absolute_url}}{% if not t.is_finished %}/start{% endif %}">view{% if t.can_write %}/edit{% endif %}</a>)
                   </label>
                 </div>
 
               {% else %}
 
-                <p>Select an existing module that provides the answers or start a new {{answer_module.title}} module.</p>
+                <p>Select an existing set of answers or start a new {{answer_module.title}}.</p>
 
               {% endif %}
 
@@ -160,7 +160,7 @@ Next Question: {{q.spec.title}}
                   <label>
                     <input name="value" value="{{m.id}}" type="radio">
                       {% if t %}Change answers to:<br>{% endif %}
-                      {{m.title}}
+                      {{m.render_title}}
                       ({% if answer_tasks_show_user %}Edited by {% if m.editor == request.user %}you{% else %}{{m.editor}}{% endif %}; {% endif %}{{m.get_status_display}})
                   </label>
                 </div>
@@ -171,11 +171,11 @@ Next Question: {{q.spec.title}}
                 <label>
                   <input name="value" value="__new" type="radio">
                   {% if t %}
-                    Start over by answering
+                    Start over and create
                   {% else %}
-                    Start
+                    Create
                   {% endif %}
-                  a new {{answer_module.title}} module
+                  a new {{answer_module.title}}
                 </label>
               </div>
 
