put the keyboard focus into the project title input field when the new project page is loaded

--- a/templates/new-project.html
+++ b/templates/new-project.html
@@ -25,3 +25,11 @@ New Project
 </form>
 
 {% endblock %}
+
+{% block scripts %}
+<script>
+$(function() {
+  $('#id_title').focus();
+})
+</script>
+{% endblock %}
